<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EnglishWordBookSample</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="btn_checkword">英単語帳を開く</string>
    <string name="btn_addword">単語を登録する</string>
    <string name="tv_addword_title">英単語を登録</string>
    <string name="tv_englishword">英単語を入力してください。</string>
    <string name="tv_japaneseword">日本語を入力してください。</string>
    <string name="btn_toppage">トップへ</string>
    <string name="btn_save">単語を登録</string>
    <string name="tv_checkword_title">英単語帳</string>
    <string name="tv_check_englishword">英単語の日本語訳は？</string>
    <string name="tv_check_japaneseword">日本語訳</string>
    <string name="btn_nextpage">次へ</string>
    <string name="btn_backpage">前へ</string>
    <string name="btn_checkpronounce">発音Check</string>
    <string name="tv_checkpronounce_title">発音Check</string>
    <string name="tv_pushbutton">ボタンを押して発音</string>
    <string name="tv_result">あなたの発音結果</string>
    <string name="btn_checkwordpage">英単語帳へ</string>
    <string name="btn_correctpronounce">正しい発音</string>
    <string name="btn_startcheck">START</string>
    <string name="title_activity_add_word">AddWordActivity</string>
    <string name="add_confirm_text">登録確認</string>
    <string name="confirm_message_text">登録してよろしいですか。</string>
    <string name="yes_text">はい</string>
    <string name="no_text">いいえ</string>
    <string name="input_words_text">英単語と日本語訳を入力してください。</string>

</resources>