<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
      android:text="@string/tv_checkword_title"
      android:textSize="30sp"
      android:textColor="@android:color/white"
      android:gravity="center"
      android:background="@color/dark_green"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginBottom="20dp"/>

    <TextView
      android:text="@string/tv_check_englishword"
      android:textSize="20dp"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:layout_marginBottom="5dp"/>
    <TextView
      android:id="@+id/tv_englishword"
      android:textSize="30sp"
      android:background="@android:color/white"
      android:gravity="center"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:layout_marginBottom="20dp"/>

    <TextView
      android:text="@string/tv_check_japaneseword"
      android:textSize="20dp"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:layout_marginBottom="5dp"/>
    <TextView
      android:id="@+id/tv_japaneseword"
      android:textSize="30sp"
      android:background="@android:color/white"
      android:gravity="center"
      android:layout_width="match_parent"
      android:layout_height="100dp"
      android:layout_marginBottom="20dp"/>

    <LinearLayout
      android:orientation="horizontal"
      android:gravity="center_horizontal"
      android:layout_width="match_parent"
      android:layout_height="50dp">

      <Button
        android:id="@+id/btn_toppage"
        android:text="@string/btn_toppage"
        android:layout_width="100dp"
        android:layout_height="50dp"/>
      <Button
        android:id="@+id/btn_backpage"
        android:text="@string/btn_backpage"
        android:layout_width="60dp"
        android:layout_height="50dp"/>
      <Button
        android:id="@+id/btn_nextpage"
        android:text="@string/btn_nextpage"
        android:layout_width="60dp"
        android:layout_height="50dp"/>
      <Button
        android:id="@+id/btn_checkpronounce"
        android:text="@string/btn_checkpronounce"
        android:layout_width="100dp"
        android:layout_height="50dp"/>

    </LinearLayout>
</LinearLayout>
