<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
      android:text="@string/tv_addword_title"
      android:textSize="30sp"
      android:textColor="@android:color/white"
      android:gravity="center"
      android:background="@color/dark_blue"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginBottom="20dp"/>

    <TextView
      android:text="@string/tv_englishword"
      android:textSize="20sp"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:layout_marginBottom="5dp"/>
    <EditText
      android:id="@+id/et_englishword"
      android:inputType="text"
      android:singleLine="true"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginBottom="20dp"/>

    <TextView
      android:text="@string/tv_japaneseword"
      android:textSize="20sp"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:layout_marginBottom="5dp"/>
    <EditText
      android:id="@+id/et_japanesehword"
      android:inputType="text"
      android:singleLine="true"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      android:layout_marginBottom="20dp"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >
        <Button
          android:id="@+id/btn_toppage"
          android:text="@string/btn_toppage"
          android:layout_width="100dp"
          android:layout_height="50dp"/>
        <Button
          android:id="@+id/btn_save"
          android:text="@string/btn_save"
          android:layout_width="100dp"
          android:layout_height="50dp"/>
    </LinearLayout>
</LinearLayout>

